refactored Spring Security and optimize React router paths